--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-boilerplate",
+  "name": "webmotors-test",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -13,11 +13,14 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "next": "9.5.3",
-    "next-pwa": "^3.1.5",
+    "next-images": "^1.7.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "styled-components": "^5.2.0"
+    "react-icons": "^4.2.0",
+    "styled-components": "^5.2.0",
+    "styled-media-query": "^2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
